[package]

name = "gcollections"
version = "1.5.0"
authors = [ "Pierre Talbot <ptalbot@hyc.io>" ]

description = "Generic traits over Rust collections library."
documentation = "https://docs.rs/gcollections/1.4.0/gcollections/"
repository = "https://github.com/ptal/gcollections"
readme = "README.md"
keywords = ["data-structure", "containers", "generic"]
license = "MIT/Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]
name = "gcollections"
path = "src/libgcollections/lib.rs"

[dependencies]
bit-set = "^0.2.0"
trilean = "^1.0.1"

[dependencies.num]
version = "0.4"
default-features = false

[features]
nightly = []
